# app/Models/Message.php
@@ -11,7 +11,11 @@ class Message extends Model
     use HasFactory;
     use SoftDeletes;
 
-    protected $fillable = ['user_id', 'chatroom_id', 'message', 'attachment'];
+    protected $fillable = ['user_id', 'chatroom_id', 'message', 'attachments'];
+
+    protected $casts = [
+        'attachments' => 'array',
+    ];
 
     public function user()
     {
@@ -21,5 +25,13 @@ class Message extends Model
     public function chatroom()
     {
         return $this->belongsTo(Chatroom::class);
+    }
+
+    public function getAttachmentsAttribute($value)
+    {
+        $attachments = json_decode($value, true) ?? [];
+        return array_map(function ($path) {
+            return asset('storage/' . $path);
+        }, $attachments);
     }
 }
